--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
         <developer>
             <id>Opposite-clock</id>
             <name>Opposite-clock</name>
-            <email></email>
+            <email>wangjiwangwill@gmail.com</email>
             <url>https://github.com/Opposite-clock</url>
             <roles>
                 <role>author</role>
