--- a/taube-client/pom.xml
+++ b/taube-client/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>taube</artifactId>
-        <groupId>org.hegemol</groupId>
+        <groupId>org.hegemol.taube</groupId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -12,6 +12,12 @@
     <artifactId>taube-client</artifactId>
 
     <dependencies>
+
+        <dependency>
+            <groupId>org.hegemol.taube</groupId>
+            <artifactId>taube-core</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -33,9 +39,6 @@
             <artifactId>jboss-marshalling-serial</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
-        </dependency>
+
     </dependencies>
 </project>
