--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
         <commons-lang3.version>3.11</commons-lang3.version>
         <spring-boot.version>2.4.3</spring-boot.version>
         <kryo.version>4.0.2</kryo.version>
+        <fastjson.version>1.2.62</fastjson.version>
 
         <maven-javadoc-plugin.version>3.2.0</maven-javadoc-plugin.version>
         <maven-source-plugin.version>3.2.1</maven-source-plugin.version>
@@ -110,6 +111,12 @@
                 <groupId>com.esotericsoftware</groupId>
                 <artifactId>kryo</artifactId>
                 <version>${kryo.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>fastjson</artifactId>
+                <version>${fastjson.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
