--- a/taube-core/pom.xml
+++ b/taube-core/pom.xml
@@ -28,6 +28,12 @@
             <groupId>com.esotericsoftware</groupId>
             <artifactId>kryo</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>5.3.4</version>
+        </dependency>
     </dependencies>
 
 </project>
