--- a/pom.xml
+++ b/pom.xml
@@ -143,6 +143,7 @@
                 <configuration>
                     <source>8</source>
                     <target>8</target>
+                    <encoding>utf-8</encoding>
                 </configuration>
             </plugin>
             <!-- Javadoc -->
@@ -150,6 +151,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>${maven-javadoc-plugin.version}</version>
+                <configuration>
+                    <encoding>utf-8</encoding>
+                </configuration>
                 <executions>
                     <execution>
                         <phase>package</phase>
