--- a/taube-core/pom.xml
+++ b/taube-core/pom.xml
@@ -11,6 +11,8 @@
 
     <artifactId>taube-core</artifactId>
 
+    <packaging>jar</packaging>
+
     <dependencies>
 
         <dependency>
@@ -30,9 +32,9 @@
         </dependency>
 
         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-context</artifactId>
-            <version>5.3.4</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-autoconfigure</artifactId>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
